--- a/src/App.css
+++ b/src/App.css
@@ -77,4 +77,11 @@ header {
   width: 50px;
   height: 50px;
   display: inline-block;
+  text-align: center;
+  vertical-align: bottom;
+}
+
+.square img {
+  width: 50px;
+  height: 50px;
 }
