--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,18 @@ a:hover {
   width: 100vw;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  clip-path: inset(50%);
+  border: 0;
+}
+
 /* Components */
 header {
   font-size: calc(10px + 2vmin);
