--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   background-color: black;
 }
 
+.bg-grey {
+  background-color: grey;
+}
+
 .bg-white {
   backgroiund-color: white;
 }
@@ -23,6 +27,15 @@
   border: 2px solid yellow !important;
 }
 
+.badge {
+  display: inline-block;
+  border-radius: 6px;
+}
+
+.active {
+  background-color: blue;
+}
+
 /* Links/Text */
 a {
   color: skyblue;
@@ -37,6 +50,9 @@ a:hover {
   font-size: 16px;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
 
 /* Flex */
 .d-flex {
@@ -59,6 +75,10 @@ a:hover {
   align-items: center;
 }
 
+.align-items-start {
+  align-items: start;
+}
+
 .flex-column {
   flex-direction: column;
 }
@@ -77,16 +97,38 @@ a:hover {
   margin: 0;
 }
 
+.mx-2 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .m-2 {
   margin: 20px;
+}
+
+.ml-3 {
+  margin-left: 30px;
 }
 
 .p-2 {
   padding: 20px;
 }
 
+.py-2 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.p-1 {
+  padding: 10px;
+}
+
 .vw-100 {
   width: 100vw;
+}
+
+.h-100 {
+  height: 100%;
 }
 
 .sr-only {
@@ -99,6 +141,10 @@ a:hover {
   white-space: nowrap;
   clip-path: inset(50%);
   border: 0;
+}
+
+.d-none {
+  display: none;
 }
 
 /* Components */
@@ -122,6 +168,35 @@ header {
 .square img {
   width: 50px;
   height: 50px;
+}
+
+.player-card {
+  min-height: 50px;
+}
+
+.move-history {
+  min-width: 250px;
+  min-height: 200px;
+}
+
+.empty {
+  min-width: 250px;
+}
+
+.move-description {
+  display: block;
+  min-width: 100px;
+}
+
+.move-description > span {
+  width: 30px;
+  display: inline-block;
+}
+
+.move-description > span:first-child {
+  margin-left: 10px;
+  margin-right: 15px;
+  margin-bottom: 10px;
 }
 
 /* On Small Screens 600px or less */
