--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,16 @@ a:hover {
   padding: 40px;
 }
 
+.py-1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.px-2 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .py-2 {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -189,6 +199,10 @@ a:hover {
 
 .d-none {
   display: none;
+}
+
+.d-inline-block {
+  display: inline-block;
 }
 
 /* Components */
@@ -231,17 +245,16 @@ header {
 }
 
 .player-card {
-  min-height: 50px;
+  min-height: 100px;
   border: 2px solid black;
   border-radius: 4px;
 }
 
 .move-history {
-  min-width: 250px;
-  min-height: 200px;
+  min-height: 100px;
   border: 2px solid black;
   border-radius: 4px;
-  max-height: calc(100% - 20px);
+  max-height: 350px;
 }
 
 .move-description {
@@ -255,9 +268,13 @@ header {
 }
 
 .move-description > span:first-child {
-  margin-left: 10px;
-  margin-right: 15px;
+  margin-left: 15px;
+  margin-right: 20px;
   margin-bottom: 10px;
+}
+
+.graveyard {
+  flex-flow: wrap;
 }
 
 @media only screen and (max-width: 796px) {
