--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,10 @@ a:hover {
   justify-content: flex-end;
 }
 
+.justify-self-end {
+  justify-self: end;
+}
+
 .align-items-center {
   align-items: center;
 }
@@ -178,7 +182,7 @@ a:hover {
 }
 
 .vh-100 {
-  height: calc(100vh - 90px);
+  height: calc(100vh - 80px);
 }
 
 .h-100 {
